Adding last number.

--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
 }
 
 html {
-  font-family: 'Jost', sans-serif;
+  font-family: "Jost", sans-serif;
 }
 
 body {
@@ -42,11 +42,29 @@ header {
 #events p {
   font-size: 1.25rem;
   font-weight: bold;
+  /* border: 1px solid #4fc08d; */
+  /* background-color: #4fc08d; */
+  color: grey;
+  padding: 0.5rem;
+  border-radius: 25px;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0.5rem;
+  margin: 0.05rem auto;
+}
+
+li {
+  font-size: 1.25rem;
+  font-weight: bold;
   border: 1px solid #4fc08d;
   background-color: #4fc08d;
   color: white;
   padding: 0.5rem;
   border-radius: 25px;
+  margin: 0.5rem auto;
+  width: 70%;
 }
 
 #events input {
@@ -66,7 +84,7 @@ header {
   border: 1px solid #ff0077;
   background-color: #ff0077;
   color: white;
-  padding: 0.05rem 1rem;
+  padding: 0.2rem 2rem;
   box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.26);
   border-radius: 20px;
   margin: 0 1rem;
