--- a/styles.css
+++ b/styles.css
@@ -45,8 +45,18 @@ header {
   /* border: 1px solid #4fc08d; */
   /* background-color: #4fc08d; */
   color: grey;
-  padding: 0.5rem;
+  padding: 0.1rem;
   border-radius: 25px;
+  margin: 0.2rem auto;
+}
+#events .winNumber {
+  background-color: black;
+  font-size: 1.5rem;
+  font-weight: bold;
+  width: 30%;
+  color: lightgray;
+  border-radius: 25px;
+  border: 1px solid rgb(0, 0, 0);
 }
 
 ul {
@@ -87,7 +97,7 @@ li {
   padding: 0.2rem 2rem;
   box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.26);
   border-radius: 20px;
-  margin: 0 1rem;
+  margin: 1rem 1rem;
 }
 
 #events button:hover,
